--- a/client.html
+++ b/client.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<script src="/SocketConnection.js" name="Socket"></script>
+<script src="/socket/SocketConnection.js" name="Socket"></script>
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.js"></script>
 <style>
