--- a/client.html
+++ b/client.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <script src="/socket/SocketConnection.js" name="Socket"></script>
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-<script src="https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <style>
   fieldset {
     border: 1px solid #99FF33;
