增加連線提示

--- a/client.html
+++ b/client.html
@@ -1,7 +1,4 @@
 <meta charset="utf-8">
-<script src="/socket/SocketConnection.js" name="Socket"></script>
-<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <style>
   fieldset {
     border: 1px solid #99FF33;
@@ -70,6 +67,20 @@
   <button id="send">發送</button>
 </fieldset>
 
+
+<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script>
+  var resource = '/socket/SocketConnection.js';
+  location.href.replace(/\?(.+)$/, function(m, $1){
+    $1.replace(/([^\^&=]+)(=[^&\$]+)?/g, function(m, $1, $2){
+      $2 = $2 && $2.replace(/^=/, '');
+
+      if ('resource' == $1) resource = $2;
+    });
+  });
+  document.write('<script src="'+resource+'" name="Socket"><\/script>');
+</script>
 <script>
 
   (function(
@@ -105,8 +116,17 @@
         socket = Socket.connect($inp_socket_url.val());
         $all_msg.empty();
 
-        socket.on('message', function (e) {
+        socket.on('message', function(e){
           $all_msg.append('<p class="msg">'+JSON.stringify(e.data)+'<span>'+(new Date).toLocaleString()+'</span></p>').animate({scrollTop: $all_msg.get(0).scrollHeight}, 300);
+        });
+
+        socket.on('open', function(e){
+          $inp_socket_url.css('background', '#99FF33');
+        });
+
+        socket.on('close', function(e){
+          if (socket) $btn_conn.click();
+          $inp_socket_url.css('background', 'red');
         });
 
         $btn_conn.text('disconnect');
