--- a/client.html
+++ b/client.html
@@ -58,7 +58,7 @@
 
   .fixed{clear: both;}
 </style>
-<form><input type="text" id="resource" name="resource" value="/socket/SocketConnection.js"><button type="submit">更換resource</button></form>
+<form><input type="text" id="resource" name="resource" value="SocketConnection.js"><button type="submit">更換resource</button></form>
 <fieldset>
   <legend>connect server</legend>
   <label><input id="socket-url" placeholder="socket server url"></label>
