更換js 成壓縮檔

--- a/client.html
+++ b/client.html
@@ -85,7 +85,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script>
-  var resource = 'SocketConnection.js';
+  var resource = 'socket.min.js';
   location.href.replace(/\?(.+)$/, function(m, $1){
     $1.replace(/([^\^&=]+)(=[^&\$]+)?/g, function(m, $1, $2){
       $2 = $2 && $2.replace(/^=/, '');
