--- a/client.html
+++ b/client.html
@@ -105,9 +105,9 @@
     });
   });
   document.write('<script src="'+resource+'" name="Socket"><\/script>');
-  acync.forEach(function(href){
-    document.write('<script src="'+resource+'" name="Socket"><\/script>');
-  });
+//  acync.forEach(function(href){
+//    document.write('<script src="'+resource+'" name="Socket"><\/script>');
+//  });
 </script>
 <script>
 
