--- a/client.html
+++ b/client.html
@@ -15,8 +15,8 @@
   <!-- <h6>channel msg <----------------- all msg</h6> -->
   <!-- <div class="fixed"></div> -->
   <div class="box">
-    <span>channel msg <</span>
-    <span>> all msg</span>
+    <span>channel msg &lt;</span>
+    <span>&gt; all msg</span>
     <div id="display"></div>
     <div id="all-msg"></div>
   </div>
@@ -28,6 +28,25 @@
   <button id="send">發送</button>
 </fieldset>
 
+<style>
+footer {
+    font-size: 11px;
+    text-align: right;
+}
+footer p{
+    color: #CCC;
+}
+footer p a {
+    color: #AAA;
+}
+footer p a:hover {
+    color: #999;
+}
+</style>
+<footer>
+    <p>javascript power by <a target="blank" href="https://github.com/colindev">Colin</a></p>
+    <p>css power by <a target="blank" href="https://github.com/estherj-hsu">estherj-hsu</a></p>
+</footer>
 
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
